--- a/index.html
+++ b/index.html
@@ -23,3 +23,12 @@ Mathifi 2.2
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 
+<style>
+
+
+  
+ a {
+   color: #00FF00
+ }
+  
+</style>
