--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@ Mathifi 2.2
 
   
  a {
-   color: #00FF00
+   color: #4DFFA3
+ }
+
+ body {
+    color: #FDFF94;
+ }
+
+ body {
+    background: #270047;
  }
   
 </style>
