--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Mathifi 2.2
 <br>    
 <a href="">Hasnt been made into a web page</a>
 <hr>
-<br>
+Other stuff!
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 
