--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ Mathifi 2.2
 Other stuff!
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
+<hr>
+<img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
 
 <style>
 
