--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 Geographi
 <br>
-<a href="https://bklimt.github.io/geografi/">Geographi-A</a>
+<a href="https://bklimt.github.io/geografi/">Geographi-A</a> 
+<details>
+  <summary>info</summary>
+  multiple choice quiz on state capitals (10 questions)
+</details>
 <hr>
-
 Mathifi 1.0
 <br>    
 <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi-1.0-A</a>
+<details>
+  <summary>info</summary>
+  lets you choose a difficulty and operation (9 questions)
+</details>
 <hr>
 Mathifi 2.0 (so buggy)
 <br>    
@@ -18,6 +25,10 @@ Mathifi 2.1
 Mathifi 2.2
 <br>    
 <a href="https://llamaking9999.github.io/Mathifi-2.2-A/">Mathifi-2.2-A</a>
+<details>
+  <summary>info</summary>
+  solve 3 part randomly genarated word problems (we recomend using paper or a white board if you are unsure of your skills) (answer until you get one wrong)
+</details>
 <hr>
 Other stuff!
 <br>
