--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Other stuff!
 </details>
 <br>
 <details>
-  <summary>mathifi-1.0-A info</summary>
+  <summary>Mathifi-1.0-A info</summary>
   lets you choose a difficulty and operation 
   <br>
   (9 questions)
@@ -42,7 +42,7 @@ Other stuff!
   <summary>Mathifi-2.2-A info</summary>
   solve 3 part randomly genarated word problems 
   <br>
-  (we recomend using paper or a white board if you are unsure of your skills) 
+  we recomend using paper or a white board if you are unsure of your skills
   <br>
   (answer until you get one wrong)
 </details>
