--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Other stuff!
   <summary>Mathifi-2.2-A info</summary>
   solve 3 part randomly genarated word problems 
   <br>
-  we recomend using paper or a white board if you are unsure of your skills
+  (we recomend using paper or a white board if you are unsure of your skills)
   <br>
   (answer until you get one wrong)
 </details>
