--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Geographi
 <br>
-<a href="https://bklimt.github.io/geografi/">Geographi-A</a> 
+<a href="https://bklimt.github.io/geografi/">Geographi-A</a> &nbsp <a href="https://llamaking9999.github.io/geografi-B/">Geographi-B</a> 
 <hr>
 Mathifi 1.0
 <br>    
@@ -29,6 +29,12 @@ Other stuff!
   multiple choice quiz on state capitals 
   <br>
   (10 questions)
+</details>
+<br>
+  <summary>Geographi-B info</summary>
+  givs you 2 states and you have to guess which one is larger
+  <br>
+  (new question whenever you hit a button)
 </details>
 <br>
 <details>
