--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ Mathifi 1.0
 <br>    
 <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi-1.0-A</a>
 <hr>
+<details>
+  <summary>obsolete versions</summary>
 Mathifi 2.0 (so buggy)
 <br>    
 <a href="">Hasnt been made into a web page</a>
@@ -13,6 +15,7 @@ Mathifi 2.0 (so buggy)
 Mathifi 2.1 
 <br>    
 <a href="">Hasnt been made into a web page</a>
+</details>
 <hr>
 Mathifi 2.2
 <br>    
@@ -31,6 +34,7 @@ Other stuff!
   (10 questions)
 </details>
 <br>
+<details>
   <summary>Geographi-B info</summary>
   givs you 2 states and you have to guess which one is larger
   <br>
