--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Geographi
 <br>
-<a href="https://bklimt.github.io/geografi/">Geographi-A</a> &nbsp <a href="https://llamaking9999.github.io/geografi-B/">Geographi-B</a> 
+<a href="https://bklimt.github.io/geografi/">Geografi-A</a> &nbsp <a href="https://llamaking9999.github.io/geografi-B/">Geografi-B</a> 
 <hr>
 Mathifi 1.0
 <br>    
@@ -15,16 +15,17 @@ Other stuff!
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <hr>
 <img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
+<img src="Untitled (5).png" alt="Geografi logo"   width="200" height="200" />
 <hr>
 <details>
-  <summary>Geographi-A info</summary>
+  <summary>Geografi-A info</summary>
   multiple choice quiz on state capitals 
   <br>
   (10 questions)
 </details>
 <br>
 <details>
-  <summary>Geographi-B info</summary>
+  <summary>Geografi-B info</summary>
   givs you 2 states and you have to guess which one is larger
   <br>
   (new question whenever you hit a button)
