--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Other stuff!
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <hr>
 <img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
-<img src="Untitled (5).png" alt="Geografi logo"   width="200" height="200" />
+//<img src="Untitled (5).png" alt="Geografi logo"   width="200" height="200" />
 <hr>
 <details>
   <summary>Geografi-A info</summary>
