--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@ Mathifi 2.1
 </style>
 
 <title>Mathifi</title>
- <link rel="icon" type="image/x-icon" href="mathifi logo (1).png"">
+ <link rel="icon" type="image/x-icon" href="mathifi logo (1).png">
 
  
