--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ Mathifi 2.1
   
 </style>
 
+<header>
 <title>Mathifi</title>
  <link rel="icon" type="image/x-icon" href="mathifi logo (1).png">
+  </header>
 
  
