--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Mathifi 2.1
 
 <header>
 <title>Mathifi</title>
- <link rel="icon" type="image/x-icon" href="mathifi logo (1).png">
+ <link rel="icon" type="image/png" href="mathifi logo (1).png">
   </header>
 
  
