--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@ Mathifi 2.2
 <br>    
 <a href="https://llamaking9999.github.io/Mathifi-2.2-A/">Mathifi-2.2-A</a>
 <hr>
+<details>
+  <summery>
 Other stuff!
+    </summery>
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
-<hr>
-<img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
 <br>
-<br>
-<details>
+  <br>
+  <details>
   <summary>obsolete versions</summary>
 Mathifi 2.0 (so buggy)
 <br>    
@@ -27,6 +28,9 @@ Mathifi 2.1
 <br>    
 <a href="">Hasnt been made into a web page</a>
 </details>
+</details>
+<hr>
+<img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
 <hr>
 <details>
   <summary>Geografi-A info</summary>
