--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ Mathifi 2.2
 <a href="https://llamaking9999.github.io/Mathifi-2.2-A/">Mathifi-2.2-A</a>
 <hr>
 <details>
-  <summery>
-Other stuff!
-    </summery>
+  <summary>Other stuff!</summary>
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <br>
