--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Mathifi 2.2
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <br>
   <br>
-  <a href="https://llamaking9999.github.io/Wordformfinder/">A up to 9 digit numeral to word form converter</a>
+  <a href="https://llamaking9999.github.io/Wordformfinder/">Our up to 9 digit numeral to word form converter</a>
 <br>
   <br>
   <details>
