--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<h1>Quizzes!</h1>
+<hr>
 Geographi
 <br>
 <a href="https://bklimt.github.io/geografi/">Geografi-A</a> &nbsp <a href="https://llamaking9999.github.io/geografi-B/">Geografi-B</a> 
@@ -10,15 +12,16 @@ Mathifi 2.2
 <br>    
 <a href="https://llamaking9999.github.io/Mathifi-2.2-A/">Mathifi-2.2-A</a>
 <hr>
+<h1>Tools!</h1>
+<hr>
+<br>
+<a href="https://llamaking9999.github.io/Wordformfinder/">Our up to 9 digit numeral to word form converter</a>
+<hr>
 <details>
   <summary>Other stuff!</summary>
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <br>
-  <br>
-  <a href="https://llamaking9999.github.io/Wordformfinder/">Our up to 9 digit numeral to word form converter</a>
-<br>
-  <br>
   <details>
   <summary>obsolete versions</summary>
 Mathifi 2.0 (so buggy)
