--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Mathifi 2.2
 <a href="https://llamaking9999.github.io/Wordformfinder/">Our up to 9 digit numeral to word form converter</a>
 <hr>
 <details>
-  <summary>Other stuff!</summary>
+  <summary><h1>Other stuff!</h1></summary>
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <br>
