--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@ Mathifi 2.2
 <hr>
 <h1>Tools!</h1>
 <hr>
-<br>
 <a href="https://llamaking9999.github.io/Wordformfinder/">Our up to 9 digit numeral to word form converter</a>
 <hr>
 <details>
-  <summary><h1>Other stuff!</h1></summary>
+  <h1><summary>Other stuff!</summary></h1>
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <br>
