--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Mathifi 2.2
 <a href="https://llamaking9999.github.io/Wordformfinder/">Our up to 9 digit numeral to word form converter</a>
 <hr>
 <details>
-  <h1><summary>Other stuff!</summary></h1>
+ <summary style="size: 100;">Other stuff!</summary>
 <br>
 <a href="https://github.com/llamaking9999/Mathifi/tree/main/python">You can see all of the classic python versons here</a>
 <br>
