--- a/index.html
+++ b/index.html
@@ -66,3 +66,8 @@
 </style>
 <hr>
 <img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
+<header>
+<title>Mathifi</title>
+ <link rel="icon" type="image/png" href="mathifi logo (1).png">
+  </header>
+
