--- a/index.html
+++ b/index.html
@@ -70,4 +70,36 @@
 <title>Mathifi</title>
  <link rel="icon" type="image/png" href="mathifi logo (1).png">
   </header>
-
+<hr>
+<details>
+  <summary>Geografi-A info</summary>
+  multiple choice quiz on state capitals 
+  <br>
+  (10 questions)
+</details>
+<br>
+<details>
+  <summary>Geografi-B info</summary>
+  givs you 2 states and you have to guess which one is larger
+  <br>
+  (new question whenever you hit a button)
+</details>
+<br>
+<details>
+  <summary>Mathifi-1.0-A info</summary>
+  lets you choose a difficulty and operation 
+  <br>
+  (9 questions)
+</details>
+<br>
+<details>
+  <summary>Mathifi-2.2-A info</summary>
+  solve 3 part randomly genarated word problems 
+  <br>
+  (we recomend using paper or a white board if you are unsure of your skills)
+  <br>
+  (answer until you get one wrong)
+</details>
+<hr>
+<h1>About us</h1>
+We are a bunch of gen alpha nerds in silicon valley. originally we started for extra credit but we now develop for fun! We originaly started in may or march 2024 in python but in the following summer we re-programmed it in javascript
