--- a/index.html
+++ b/index.html
@@ -67,3 +67,7 @@
         color: aquamarine;
     }
 </style>
+
+<img src="mathifi logo (1).png" alt="Mathifi logo"   width="200" height="200" />
+
+
