--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     <br>
 <div>
     <button>
-        <a href="https://llamaking9999.github.io/Mathifi-2.2-A"/>Mathifi 2.2</a>.
+        <a href="https://llamaking9999.github.io/Mathifi-2.2-A"/>Mathifi 2 V2</a>.
     </button>
 
     <button>
-        <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi 1.0</a>.
+        <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi 1 V1</a>.
     </button>
 
     <button>
-        <a href="https://bklimt.github.io/geografi/">Geografi-A</a>.
+        <a href="https://bklimt.github.io/geografi/">Geografi 1</a>.
     </button>
 
     <button>
-        <a href="https://llamaking9999.github.io/geografi-B/">Geografi-B</a>.
+        <a href="https://llamaking9999.github.io/geografi-B/">Geografi 2</a>.
     </button>
 
 </div>
