--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <br>
 <div>
     <button>
-        <a href="https://llamaking9999.github.io/Mathifi-2.2-A"/>Mathifi 2 V2</a>.
+        <a href="https://llamaking9999.github.io/Mathifi-2.2-A"/>Mathifi 2 V3</a>.
     </button>
 
     <button>
@@ -16,6 +16,10 @@
 
     <button>
         <a href="https://llamaking9999.github.io/geografi-B/">Geografi 2</a>.
+    </button>
+
+       <button>
+        <a>Mathifi 3 V1 *releasing 10/28* </a>.
     </button>
 
 </div>
