--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi 1 V1</a>.
     </button>
 
+        <button>
+        <a href="https://llamaking9999.github.io/Mathifi-3.0/">Mathifi 3 V1</a>.
+    </button>
+
+
+
     <button>
         <a href="https://bklimt.github.io/geografi/">Geografi 1</a>.
     </button>
