--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
 <h1>wall of current sponsors</h1>
 <div>
     <button>
-        <a href="https://scratch.mit.edu/users/megaX4603/"/>megaX4603 4$ sponsor </a>.
-        <!-- untill december 1st -->
     </button>
 
      
@@ -85,6 +83,8 @@
 
      
 </div>
+<hr>
+<button style="color:red">Subscribe</button>
 
 
 
