--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <a href="https://llamaking9999.github.io/Mathifi-3.0/">Mathifi 3 V1</a>.
     </button>
 
+    <button>
+        <a href="https://llamaking9999.github.io/Lifeley/">Lifely *unfinished*</a>.
+    </button>
+
 
 
     <button>
@@ -84,6 +88,7 @@
      
 </div>
 <hr>
+<h1>Fun Stuff</h1>
 <button style="color:red">Subscribe</button>
 
 
