--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
     <br>
 <div>
     <button>
-        <a href="https://llamaking9999.github.io/Mathifi-2.2-A"/>Mathifi 2 V3</a>.
+        <a href="https://llamaking9999.github.io/Mathifi-2.2-A"/>Mathifi 2.2</a>.
     </button>
 
     <button>
-        <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi 1 V1</a>.
+        <a href="https://llamaking9999.github.io/Mathifi-1.0-A/">Mathifi 1.0</a>.
     </button>
 
         <button>
-        <a href="https://llamaking9999.github.io/Mathifi-3.0/">Mathifi 3 V1</a>.
+        <a href="https://llamaking9999.github.io/Mathifi-3.0/">Mathifi 3.0 </a>.
     </button>
+    
+  <button>
+ <a href="https://llamaking9999.github.io/crispy-enigma/">Mathifi IV </a>.
+  <button>
 
+
+
+    
     <button>
         <a href="https://llamaking9999.github.io/Lifeley/">Lifely *unfinished*</a>.
     </button>
-
-
 
     <button>
         <a href="https://bklimt.github.io/geografi/">Geografi 1</a>.
