--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
 <hr>
 <h1>wall of all sponsors</h1>
 <div>
-    <button>
+    <!-- <button>
         <a href="https://scratch.mit.edu/users/megaX4603/"/>megaX4603 4$ sponsor </a>.
         <!-- untill december 1st -->
-    </button>
+    <!-- </button> -->
+
+    <button>None right now... but you could change that!</button>
 
      
 </div>
